# Voxel

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
inc/glad/: glad.h
lib/: glfw3.lib
resource/shader/fragment/: fragment.txt  voxel.txt
resource/shader/vertex/: vertex.txt  voxel.txt
src/cpp/: Main.cpp
src/cpp/gui/: Camera.cpp  ChunkRenderer.cpp  Color.cpp  GuiUpdatable.cpp  WorldUi.cpp
src/cpp/gui/draw/: Attribute.cpp  ChunkRenderer.cpp  Drawable.cpp  GlLock.cpp  VAO.cpp  VBO.cpp
src/cpp/gui/glad/: glad.c
src/cpp/gui/shader/: Shader.cpp  ShaderProgram.cpp
src/cpp/gui/window/: Window.cpp
src/cpp/io/: CallBack.cpp  ChunkCache.cpp  ChunkLoader.cpp  KeyBoard.cpp  KeyCache.cpp  Mouse.cpp
src/cpp/phys/: ChunkTypes.cpp  GameEngine.cpp  GameObject.cpp  PhysicalObject.cpp  PhysicsEngine.cpp  Player.cpp
src/cpp/struc/: Chunk.cpp  Coord.cpp  Voxel.cpp  World.cpp
src/cpp/util/diagnostic/: Diagnostic.cpp  RollingAvg.cpp  VoxelDiagnostics.cpp
src/inc/: Main.h
src/inc/gui/: Camera.h  ChunkRenderer.h  Color.h  GuiUpdatable.h  WorldUi.h
src/inc/gui/draw/: Attribute.h  ChunkRenderer.h  Drawable.h  Drawer.h  GlLock.h  VAO.h  VBO.h
src/inc/gui/shader/: Shader.h  ShaderProgram.h
src/inc/gui/window/: Window.h
src/inc/io/: Cache.h  CallBack.h  ChunkCache.h  ChunkCacheListener.h  ChunkLoader.h  KeyBoard.h  KeyCache.h  Loader.h  Mouse.h  MultiValCache.h  ObjectPool.h  ReadWriteCache.h  ReadWriteSet.h
src/inc/phys/: GameEngine.h  GameObject.h  PhysicalObject.h  PhysicsEngine.h  Player.h  chunkTypes.h
src/inc/struc/: Chunk.h  Coord.h  Voxel.h  World.h
src/inc/util/: Triple.h
(+11 files in other folders)
